# djancial

./: Dockerfile  celerybeat-schedule  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
communications/: consumers.py  models.py  urls.py  views.py
communications/migrations/: 0001_initial.py
djancial/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
friends/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
friends/migrations/: 0001_initial.py  0002_auto_20210123_0745.py  0003_auto_20210123_0749.py  0004_auto_20210123_0750.py  0005_auto_20210123_0802.py
home/: urls.py  views.py
newsfeed/: admin.py  forms.py  models.py  views.py
newsfeed/migrations/: 0001_initial.py
notifications/: consumers.py  context_processors.py  models.py  routing.py  views.py
notifications/migrations/: 0001_initial.py
search/: documents.py  views.py
static/js/: script.js
templates/: base.html
templates/accounts/: home.html  login.html  search.html  signup.html
templates/communications/: all-messages.html  friend-messages.html
templates/friends/: accept-friends.html  find-friends.html
templates/includes/: scripts.html  sidebar.html
templates/todo/: notifications.html  todo.html
templates/userprofile/: edit-profile.html  user-profile.html
todolist/: forms.py  models.py  tasks.py  urls.py  views.py
todolist/migrations/: 0001_initial.py  0002_auto_20210203_1533.py  0003_auto_20210205_2135.py  0004_auto_20210205_2156.py  0005_auto_20210205_2157.py
userprofile/: models.py  urls.py  views.py
(+1 files in other folders)
